FIX: wrong use of sectioning in semantic HTML structure. Use the header directly in the article or use non-semantic wrapping which does not affect the semantic structure of the DOM. Use only 1 <h1> tag per document if possible for accessibility. Use sections preferably with headings.

--- a/newsletter-sign-up-with-success-message/styles/main.css
+++ b/newsletter-sign-up-with-success-message/styles/main.css
@@ -31,7 +31,7 @@ main {
         background-color: var(--form-background);
     }
 }
-header > h1 {
+header > h1, aside header > h2 {
     @media only screen and (max-width: 700px) {
         font-size: 2.4rem;
     }
@@ -70,7 +70,7 @@ article {
         border-radius: 1.8rem;
     }
 }
-article > section.newsletter-form {
+article > div.newsletter-form {
     @media only screen and (max-width: 700px) {
         margin: auto;
         flex-grow: 1;
@@ -85,7 +85,7 @@ article > section.newsletter-form {
     }
 
 }
-article > section.decorative-illustration {
+article > div.decorative-illustration {
     @media only screen and (max-width: 700px) {
         width: 100%;
         max-height: fit-content;
@@ -102,7 +102,7 @@ article > section.decorative-illustration {
     }
     overflow: hidden;
 }
-article > section.decorative-illustration img {
+article > div.decorative-illustration img {
     display: block;
     width: 100%;
     height: 100%;
@@ -218,7 +218,7 @@ aside.confirmation-message {
     }
 
 }
-aside.confirmation-message section {
+aside.confirmation-message div {
     padding: 0.5rem calc(25% - 60px) 2rem;
     background: var(--form-background);
     @media only screen and (max-width: 700px) {
@@ -239,18 +239,18 @@ aside.confirmation-message section {
         border-radius: 1.8rem;
     }
 }
-aside.confirmation-message section header {
+aside.confirmation-message div header {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-aside.confirmation-message section header img {
+aside.confirmation-message div header img {
     display: block;
     width: clamp(2.8rem, 13%, 3.2rem);
     margin-bottom: 1.5rem;
 }
-aside.confirmation-message section button {
+aside.confirmation-message div button {
     margin: 1.5rem 0 0.6rem;
     flex-grow: 0;
 }
